2008-12-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-05
	* add nrefmax parameter to jet_response_analyzer_x: only the
	nrefmax leading references are considered if set to >0.

2008-12-03  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-04
	* add calo-tower fix to test/JRAt_WithFlavor_cfg.py

2008-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-03
	* add *_cfg.py files which consider the flavor of genjets
	* cleanup & move *_cfg.py to test
	* requires [UserCode/]SchieferD/Configuration V00-00-01

2008-11-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-02
	* tested with 30X tags on top of 220
	* SchieferD/Configuration V00-00-00
	* includes new algorithms ak5, ak7, ca4, ca6 for all reco types

2008-07-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-00
	* first import into CVS
